# banditry

./: README.md  pyproject.toml
src/banditry/: bandit_class.py
