[project]
name = "banditry"
version = "0.1.0"
description = "A python toolkit for multi-armed bandit"
authors = [{name = "MLasserre"}]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=2.2.2"]

[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"


[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/banditry"]
